--- a/test-scss/courses_2.html
+++ b/test-scss/courses_2.html
@@ -215,7 +215,7 @@
 
 
 
-    <section class=" bc-banner pt-4 pb-4 overflow-hidden">
+    <section class=" bc-banner py-60 overflow-hidden">
         <div class="center">
             <div class="row">
 
@@ -257,7 +257,7 @@
             </div>
         </div>
     </section>
-    <section class="teams__section py-md-5 py-3 ">
+    <section class="teams__section py-60 ">
         <div class="center">
             <div class="row">
 
@@ -391,33 +391,38 @@
         </div>
     </section>
     <seciton class="design__section overflow-hidden">
-        <div class="center">
-            <div class="row d-flex align-items-center justify-content-md-between justify-content-center flex-column flex-lg-row">
-                <div class="left__side position-relative d-none d-md-flex col-md-8 col-lg-6">
-                    <div class="w-100 py-4 block">
-                        <img class="w-100" src="./img/Artboard-1.png" alt="">
+        <div class="py-100">
+            <div class="center">
+                <div
+                    class="row d-flex align-items-center justify-content-md-between justify-content-center flex-column flex-lg-row">
+                    <div class="left__side position-relative d-none d-md-flex col-md-8 col-lg-6">
+                        <div class="w-100 py-4 block">
+                            <img class="w-100" src="./img/Artboard-1.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="right__side col-12 col-lg-5 px-0">
-                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-3 f-30 c-black">გრაფიკული დიზაინის კურსის
-                        აღწერა</span>
-                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-light-text">კურსი მოიცავს იმ
-                        ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
-                        განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
-                        ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
+                    <div class="right__side col-12 col-lg-5 px-0">
+                        <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-3 f-30 c-black">გრაფიკული დიზაინის კურსის
+                            აღწერა</span>
+                        <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-light-text">კურსი მოიცავს
+                            იმ
+                            ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
+                            განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
+                            ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
                         <div class="block d-flex d-md-none py-3">
                             <img class="w-100" src="./img/Artboard-1.png" alt="">
                         </div>
-                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-light-text">კურსი მოიცავს იმ
-                        ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
-                        განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
-                        ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
+                        <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-light-text">კურსი მოიცავს
+                            იმ
+                            ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
+                            განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
+                            ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
+                    </div>
                 </div>
             </div>
         </div>
     </seciton>
-    <section class="lectors bc-banner py-4">
-        <div class="scroll-center d-flex flex-column align-items-center">
+    <section class="lectors bc-banner py-60">
+        <div class="scroll-center mb-md-5 d-flex flex-column align-items-center">
 
             <h1 class="title f-30 helvetica-75">
                 ლექტორები
@@ -488,7 +493,7 @@
 
     </section>
 
-    <section class="silabus__section py-md-5 py-4">
+    <section class="silabus__section py-60">
         <h1 class="f-30 mb-md-5 mb-4 helvetica-75 c-black text-center">კითხვა/პასუხი</h1>
         <div class="position-relative">
             <div class="accordion center d-flex align-items-stretch align-items-md-center flex-row flex-md-column"
@@ -982,53 +987,56 @@
 
 
     </section>
-    <section class="offers__section bc-banner py-5">
-        <div class="center pt-2">
-            <div class="row d-flex flex-column pb-5">
-                <h1 class="text-center f-30 mb-3 helvetica-75 c-black">შეთავაზება</h1>
-                <span class="text-center f-16 helvetica-55 c-light-text">არ გამოტოვო საუკეთესო შეთავაზებები!</span>
-                <div class="offers__block d-flex flex-column align-items-center mt-md-3">
-                    <div class="block d-flex align-items-center justify-content-between bc-white mt-4 br-8 p-4">
-                        <div class="left d-flex flex-column">
-                            <span class=" f-24 helvetica-75 c-black">აგრაფიკული დიზაინი</span>
-                            <span class=" f-14 helvetica-55 d-flex mt-2 c-light-text">ნინი მუშკუდიანი</span>
-                        </div>
-                        <div class="right">
-                            <span class="text-center f-24 helvetica-55 c-light-text">900 ₾</span>
-
-                        </div>
-                        <img class="bottom__img" src="./img/plus.svg" alt="">
-                    </div>
-                    <div class="block d-flex align-items-center justify-content-between bc-white mt-4 br-8 p-4">
-                        <div class="left d-flex flex-column">
-                            <span class=" f-24 helvetica-75 c-black">აგრაფიკული დიზაინი</span>
-                            <span class=" f-14 helvetica-55 d-flex mt-2 c-light-text">ნინი მუშკუდიანი</span>
-                        </div>
-                        <div class="right">
-                            <span class="text-center f-24 helvetica-55 c-light-text">900 ₾</span>
-
-                        </div>
-                        <img class="bottom__img" src="./img/equal.svg" alt="">
-                    </div>
-                    <div class="block d-flex align-items-center flex-column bc-white mt-4 br-8 overflow-hidden">
-                        <div class="top d-flex flex-column p-4">
-                            <span class=" f-24 helvetica-75 c-black">ინტერფეისის დიზაინის პაკეტი</span>
-                            <span class=" f-14 helvetica-55 lh-24 d-flex mt-4 c-light-text">ისწავლე ორი კურსი
-                                ფასდაკლებით, შენთვის ეს საუკეთესო
-                                შემოთავაზეებაა. გაიარე გრაფიკული დიზაინისა და UI&UX დიზაინის
-                                სრული კურსი,ისწავლე Photoshop, illustrator, XD, Sketch App</span>
-                        </div>
-                        <div class="bottom__side w-100 d-flex align-items-center justify-content-between py-4 px-2 px-md-4"
-                            style="background-color: #F9F9F9;">
-                            <div class="left__side">
-                                <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                <!-- add like__remove class to span for row effect -->
-                                <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
+    <section class="offers__section bc-banner py-60">
+        <div class="mt-md-2 mb-md-5">
+            <div class="center pt-2">
+                <div class="row d-flex flex-column pb-5">
+                    <h1 class="text-center f-30 mb-3 helvetica-75 c-black">შეთავაზება</h1>
+                    <span class="text-center f-16 helvetica-55 c-light-text">არ გამოტოვო საუკეთესო შეთავაზებები!</span>
+                    <div class="offers__block d-flex flex-column align-items-center mt-md-3">
+                        <div class="block d-flex align-items-center justify-content-between bc-white mt-4 br-8 p-4">
+                            <div class="left d-flex flex-column">
+                                <span class=" f-24 helvetica-75 c-black">აგრაფიკული დიზაინი</span>
+                                <span class=" f-14 helvetica-55 d-flex mt-2 c-light-text">ნინი მუშკუდიანი</span>
                             </div>
-                            <div class="right__side d-flex align-items-stretch">
-                                <button type="button"
-                                    class="btn btn-light f-14 br-8 c-light-text d-none d-md-flex align-items-center">გაიგე მეტი</button>
-                                <button type="button" class="btn ml-2 blue-button f-14">შეძენა</button>
+                            <div class="right">
+                                <span class="text-center f-24 helvetica-55 c-light-text">900 ₾</span>
+
+                            </div>
+                            <img class="bottom__img" src="./img/plus.svg" alt="">
+                        </div>
+                        <div class="block d-flex align-items-center justify-content-between bc-white mt-4 br-8 p-4">
+                            <div class="left d-flex flex-column">
+                                <span class=" f-24 helvetica-75 c-black">აგრაფიკული დიზაინი</span>
+                                <span class=" f-14 helvetica-55 d-flex mt-2 c-light-text">ნინი მუშკუდიანი</span>
+                            </div>
+                            <div class="right">
+                                <span class="text-center f-24 helvetica-55 c-light-text">900 ₾</span>
+
+                            </div>
+                            <img class="bottom__img" src="./img/equal.svg" alt="">
+                        </div>
+                        <div class="block d-flex align-items-center flex-column bc-white mt-4 br-8 overflow-hidden">
+                            <div class="top d-flex flex-column p-4">
+                                <span class=" f-24 helvetica-75 c-black">ინტერფეისის დიზაინის პაკეტი</span>
+                                <span class=" f-14 helvetica-55 lh-24 d-flex mt-4 c-light-text">ისწავლე ორი კურსი
+                                    ფასდაკლებით, შენთვის ეს საუკეთესო
+                                    შემოთავაზეებაა. გაიარე გრაფიკული დიზაინისა და UI&UX დიზაინის
+                                    სრული კურსი,ისწავლე Photoshop, illustrator, XD, Sketch App</span>
+                            </div>
+                            <div class="bottom__side w-100 d-flex align-items-center justify-content-between py-4 px-2 px-md-4"
+                                style="background-color: #F9F9F9;">
+                                <div class="left__side">
+                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
+                                    <!-- add like__remove class to span for row effect -->
+                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
+                                </div>
+                                <div class="right__side d-flex align-items-stretch">
+                                    <button type="button"
+                                        class="btn btn-light f-14 br-8 c-light-text d-none d-md-flex align-items-center">გაიგე
+                                        მეტი</button>
+                                    <button type="button" class="btn ml-2 blue-button f-14">შეძენა</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -1041,13 +1049,13 @@
 
 
 
-    <section class="finished__courses course2_finish position-relative">
-        <div class="bdr">
+    <section class="finished__courses py-60 course2_finish position-relative">
+        <div class="bdr mb-md-5">
 
             <div class="scroll-center d-flex flex-column align-items-center">
-                <div class="d-flex flex-column mt-4">
-                    <h1 class="f-30 mb-2 helvetica-75 c-black">სტუდენტები კურსის შესახებ</h1>
-                    <span class="f-16 helvetica-55 c-light-text">ნახე ჩვენი ვიდეოები გრაფიკული დიზაინის კურსზე</span>
+                <div class="d-flex flex-column">
+                    <h1 class="f-30 mb-2 helvetica-75 text-center c-black">სტუდენტები კურსის შესახებ</h1>
+                    <span class="f-16 helvetica-55 text-center c-light-text">ნახე ჩვენი ვიდეოები გრაფიკული დიზაინის კურსზე</span>
                 </div>
                 <div class="w-100 position-relative">
 
@@ -1076,13 +1084,13 @@
     </section>
 
 
-    <section class="student__works bc-banner">
+    <section class="student__works py-60 bc-banner">
         <div class="scroll-center d-flex flex-column align-items-center">
             <div class="d-flex flex-column mt-4">
                 <h1 class="f-30 mb-2 helvetica-75 text-center c-black">სტუდენტების ნამუშევრები</h1>
                 <span class="f-16 helvetica-55 text-center c-light-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
                     უახლოესი ინფორმაცია მასტერკლასებზე.</span>
-                </div>
+            </div>
             <div class="scroll-parent">
 
                 <div class="w-100 d-flex justify-content-between align-items-center scroll-child overflow-auto">
@@ -1142,7 +1150,7 @@
         </div>
 
     </section>
-    <section class="acordion__section py-5">
+    <section class="acordion__section py-60">
         <h1 class="f-30 mb-5 helvetica-75 c-black text-center">კითხვა/პასუხი</h1>
 
         <div class="accordion center d-flex align-items-center flex-column" id="accordionExample">
@@ -1186,7 +1194,8 @@
                         </a>
                     </h2>
                 </div>
-                <div id="collapseThree2" class="collapse" aria-labelledby="headingThree2" data-parent="#accordionExample">
+                <div id="collapseThree2" class="collapse" aria-labelledby="headingThree2"
+                    data-parent="#accordionExample">
                     <div class="card-body py-0 px-0">
                         <ul
                             class="btn c-black f-16 helvetica-75 text-left d-flex align-items-center juscenter__side fuuter__lists  p-0  mb-3 border-left-1tify-content-between px-0">
