--- a/test-scss/vlog.html
+++ b/test-scss/vlog.html
@@ -195,7 +195,7 @@
 
     <section class=" pb-md-3 pb-2 mt-md-1">
         <div class="center">
-            <div class="d-flex justify-content-between flex-wrap main courses__main row master-class">
+            <div class="d-flex flex-wrap main courses__main row master-class">
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
