--- a/test-scss/work.html
+++ b/test-scss/work.html
@@ -143,7 +143,7 @@
     </header>
 
 
-    <div class="filter__place center d-flex align-items-center justify-content-between mt-3">
+    <div class="filter__place center d-flex align-items-center justify-content-between mt-4 pt-1">
         <div class="nav nav-tabs border-0 d-none d-md-flex" id="nav-tab" role="tablist">
             <a class="filter-a f-14 c-light-text active show" active" id="nav-home-tab" data-toggle="tab"
                 href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">ყველა</a>
@@ -156,8 +156,8 @@
             <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
                 aria-controls="nav-contact" aria-selected="false">ბიზნესი</a>
         </div>
-        <div class="drop-parent col-12 col-sm-6 col-md-3 mt-3 d-block d-md-none">
-            <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
+        <div class="drop-parent px-0 col-12 col-sm-6 col-md-3 mt-3 d-block d-md-none">
+            <div class=" dropdown-toggle border w-100 drop d-flex align-items-center justify-content-between" type="button"
                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>
                     ნებისმიერი
@@ -194,9 +194,9 @@
 
                 <div class="row d-flex  align-items-center">
 
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -210,9 +210,9 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -226,9 +226,9 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -242,9 +242,9 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -258,9 +258,9 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -274,9 +274,9 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -290,9 +290,9 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -306,9 +306,9 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -322,9 +322,9 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
@@ -338,9 +338,9 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 pointer my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
                         data-toggle="modal" data-target="#exampleModal">
-                        <div class="block br-8">
+                        <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
                                 <img class="w-100 br-tl br-tr" src="./img/Group 804.svg" alt="">
                                 <span class="f-16 px-3 c-black helvetica-75 d-block mt-1 mb-4">სტუდენტის </span>
