--- a/davaleba/index.html
+++ b/davaleba/index.html
@@ -19,7 +19,7 @@
 <section>
     <div class="left__sidebar">
         <div class="sidebar__top">
-            <div class="ball ball__1 width-10 heigh-10 bc-light-yellow"></div>
+            <div class="ball ball__1 width-10 heigh-10 bc-light-yellow">dadad</div>
         </div>
     </div>
 </section>
